--- a/main.html
+++ b/main.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<style type="text/css"> 
-			body {margin: 30px;} 
+			body { margin: 30px; } 
 		</style>  
-		<meta charset=utf-8 /> 
+		<meta charset="utf-8" /> 
 		<title>Remove items from a dropdown list</title>
 	</head>
 
@@ -19,9 +19,6 @@
 			<input type="button" id="removeButton" value="Select and Remove"> 
 		</form>
 
-		<script type="text/javascript" src="./script.js">
-		</script>
-
+		<script type="text/javascript" src="./script.js"></script>
 	</body>
-
 </html>
